--- a/offerwalls.html
+++ b/offerwalls.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <button id="hamburger">☰</button>
         <h1>Cash4Thoughts</h1>
         <div class="profile">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRFCzxivJXCZk0Kk8HsHujTO3Olx0ngytPrWw&s" alt="User Thumbnail">
@@ -15,7 +16,7 @@
             <span class="coins">0 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ9FTon4AeRyf-rDfKBpsRmfrWuHeUHFIYYaw&s" alt="Coin"></span>
         </div>
     </header>
-    <nav>
+    <nav id="sidebar">
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="offerwalls.html" class="active">Offerwalls</a></li>
@@ -27,10 +28,12 @@
         <h2>Offerwalls</h2>
         <div class="offerwall-container">
             <div class="offerwall-card">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSmxk07dQDtfzgMzCzcIbIDTZ0JxI0H4Xzv9Q&s" alt="logo">
                 <h3>Adscend</h3>
                 <p>Still waiting for approval from the offerwall company.</p>
             </div>
             <div class="offerwall-card">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSk2_QdbwSgnod3B3PG_W4vje3h4kkxTyau6w&s" alt="logo"> 
                 <h3>ayeTstudios</h3>
                 <p>Still waiting for approval from the offerwall company.</p>
             </div>
@@ -40,6 +43,13 @@
     <footer>
         <p>Developed by Muhammad Mohid Alam for UOPeople entrepreneurship course</p>
     </footer>
-    <script src="offerwalls.js"></script>
+    <script>
+          
+document.getElementById("hamburger").addEventListener("click", function() {
+        document.getElementById("sidebar").classList.toggle("show");
+    });
+
+
+    </script>
 </body>
 </html>
