--- a/rewards.html
+++ b/rewards.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <button id="hamburger">☰</button>
         <h1>Cash4Thoughts</h1>
         <div class="profile">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRFCzxivJXCZk0Kk8HsHujTO3Olx0ngytPrWw&s" alt="User Thumbnail">
@@ -15,7 +16,7 @@
             <span class="coins">0 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ9FTon4AeRyf-rDfKBpsRmfrWuHeUHFIYYaw&s" alt="Coin"></span>
         </div>
     </header>
-    <nav>
+    <nav id="sidebar">
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="offerwalls.html">Offerwalls</a></li>
@@ -40,6 +41,13 @@
     <footer>
         <p>Developed by Muhammad Mohid Alam for UOPeople entrepreneurship course</p>
     </footer>
-    <script src="rewards.js"></script>
+    <script>
+     
+document.getElementById("hamburger").addEventListener("click", function() {
+        document.getElementById("sidebar").classList.toggle("show");
+    });
+
+
+    </script>
 </body>
 </html>
